Fix another bug that was hidden by the last bug; unchecked menuitems had the insensitive icon and vice versa!

--- a/gtk-3.0/scss/widgets/_toggle.scss
+++ b/gtk-3.0/scss/widgets/_toggle.scss
@@ -24,9 +24,9 @@ $suffix: if($variant == "dark", "-dark", "");
     }
 
     &.menuitem {
-        -gtk-icon-source: url("../assets/menuitem-#{$type}-checked-insensitive.svg");
+        -gtk-icon-source: none;
 
-        &:insensitive { -gtk-icon-source: none; }
+        &:insensitive { -gtk-icon-source: url("../assets/menuitem-#{$type}-checked-insensitive.svg"); }
 
         &:checked, &:active {
             -gtk-icon-source: url("../assets/menuitem-#{$type}-checked.svg");
